# ha-power-insight

./: CLAUDE.md  README.md  hacs.json  mkdocs.yml  pyproject.toml  run_engine.py  versions.json
.github/: release-drafter.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docs.yaml  release-drafter.yml  tests.yaml  version-bump.yml
2026.7/: 404.html  index.html  requirements.txt  sitemap.xml
2026.7/concepts/: index.html
2026.7/configuration/: index.html
2026.7/entities/: index.html
2026.7/faq/: index.html
2026.7/getting-started/: index.html
2026.7/installation/: index.html
2026.7/services/: index.html
custom_components/power_insight/: __init__.py  adapter_models.py  config_flow.py  const.py  diagnostics.py  entity.py  event.py  event_handler.py  sensor.py  (+7 more)
dev/: 404.html  index.html  sitemap.xml
docs/: concepts.md  entities.md  faq.md  getting-started.md  index.md  installation.md  options-flow-redesign.md  requirements.txt  services.md
fixtures/: core.config_entries
tests/: README.md  conftest.py  engine_property_framework.py  test_adapter_models.py  test_config_flow.py  test_config_simplification.py  test_correction_factor.py  test_correction_flow.py  test_currency.py  test_dev_calculations.py  test_end_to_end.py  test_engine_property_cases.py  test_engine_property_scenarios.py  test_integration_setup.py  test_power_calculations.py  test_power_insight_calculations.py  test_release_bugfixes.py  test_sensor_entities.py  test_storage_dynamic_lcoe.py
tools/: __init__.py  engine_playground.py  mock_power_insight.py  playground.py
(+56 files in other folders)
