[project]
name = "ha-power-insight"
version = "2026.7.1"
description = "Home Assistant custom component for electrical power insights"
requires-python = ">=3.13.2"

[dependency-groups]
# Engine tier: pure-Python, no Home Assistant harness.
engine = [
    "pytest>=8.0",
]
# Full suite: engine tier + the Home Assistant integration tier.
dev = [
    "pytest>=8.0",
    "pytest-homeassistant-custom-component==0.13.316",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]
